k8s/db.yml
apiVersion: v1
kind: Service
metadata:
  name: carpool-db
spec:
  selector:
    app: carpool-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carpool-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carpool-db
  template:
    metadata:
      labels:
        app: carpool-db
    spec:
      containers:
        - name: carpool-db
          image: postgres:15
          ports:
            - containerPort: 5432
