k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: carpool-redis
spec:
  selector:
    app: carpool-redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carpool-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carpool-redis
  template:
    metadata:
      labels:
        app: carpool-redis
    spec:
      containers:
        - name: carpool-redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
