k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: carpool-app-service
spec:
  selector:
    app: carpool-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
